# bitburner-scripts

./: .eslintrc  .eslintrc.json  .gitignore  AGENTS.md  BeginnersGuide.md  CLAUDE.md  CMakePresets.json  README.md  bitburner-scripts.code-workspace  filesync.json  generic.script  global.d.ts  index.d.ts  package.json  pnpm-lock.yaml  ramUsage.json  stockApi.d.ts  tsconfig.json  vite.config.mts  vite.config.ts  viteburner.d.ts
apiBreakInfo/: APIBreakInfo-2.6.1.txt  V2_0_0_API_BREAK.txt
data/: darknet-lore.json  darknet-text.json
ideas/: progressBarGlow.js
ideas/discarded/: autoBackdoor.js  autoHack.js  autoHackParallel.js  autoHackTest.js  buyAllServers.js  crawl-rand.js  crawlIPs.js  crime.js  exploits.js  find.js  firaCode.js  ls.js  printHostname.js  testparse.js
ipvgo-engine/: .clangd  CMakeLists.txt  CMakePresets.json  README.md  build.js  katago-analysis.cfg  katagoBridge.js  katagoConvert.js  package.json  phantomStones.js  pnpm-lock.yaml  server.js
ipvgo-engine/cpp/: api.cpp  board.cpp  board.hpp  engine.cpp  engine.hpp  json_api.cpp  json_api.hpp  mcts.cpp  mcts.hpp  standalone.cpp  types.hpp
ipvgo-engine/cpp/bindings/: pyipvgo.cpp
ipvgo-engine/cpp/game/: analysis.cpp  analysis.hpp  cheats.cpp  cheats.hpp  game_cli.cpp  game_engine.cpp  game_engine.hpp  go_game.cpp  go_game.hpp  obstacles.cpp  obstacles.hpp  opponents.cpp  opponents.hpp  patterns.cpp  patterns.hpp  rng.hpp  setup.cpp  setup.hpp
ipvgo-engine/cpp/nn/: agent_env.cpp  agent_env.hpp  environment.cpp  environment.hpp  features.cpp  features.hpp  mcgs.cpp  mcgs.hpp  puct_mcts.cpp  puct_mcts.hpp
ipvgo-engine/python/: cheats.py  checkpoint.py  config.py  curriculum.py  env.py  evaluate.py  evaluator.py  mcgs.py  mcts.py  network.py  replay.py  requirements.txt  selfplay.py  selftest.py  serve.py  train.py
ipvgo-engine/scripts/: bench-factions.js  build-pyengine.js  mcgs.sh  run-game.js  setup-katago.js
scripts/: autoBackdoor.js  autoHack.js  autoHackBootstrap.js  autoHackParallel.js  autoNuke  autoNuke.js  buyAllServers.js  buyServer.js  contractSolver.js  copyHome.js  copypaste.txt  crawl-rand.js  crawl.js  crawlIPs.js  crime.js  deleteAllScripts.js  deleteData.js  deploy.js  deployParallel.js  deploySingleParallel.js  exploits.js  find.js  firaCode.js  generic.js  getServerParameters.js  grow.js  hack.js  hacknet.js  karma.js  list.js  ls.js  printHostname.js  removeSecurity.js  sanitize.js  softDeploy.js  test.js  unclickable.js  weaken.js  workout.js
scripts/contracts/: Subarray_with_Maximum_Sum.js  Unique_Paths_in_a_Grid_I.js  Unique_Paths_in_a_Grid_II.js
scripts/discarded/: crawl-rand.js  deployParallel.js  firaCode.js  generic.js  getServerParameters.js  softDeploy.js  workout.js
scripts/hacking/: autoHackParallel.js  autoHackParallelTest.js  autoHackTest.js  grow.js  growRunner.js  hack.js  hackRunner.js  weaken.js
scripts/libraries/: batching.js  format.js  growAnalyse.js
src/: analyzeTargets.ts  augmentStats.ts  autoBackdoor.js  autoHack.js  autoHackBootstrap.js  autoInfiltration.ts  autoInfiltrationLight.ts  autoNuke.ts  autoWorkFactions.ts  autoWorkMegacorps.ts  batch.js  batch.py  batch.ts  batchCalculations.ts  batchDebug.ts  batchLite.ts  batchVisualiser.ts  batchVisualizer.ts  batchVisualizerStub.ts  batchWithVisualisation.ts  batchWithVisualization.ts  bloom.ts  buyAllServers.js  buyAugments.ts  buyServer.js  buyServer.ts  compression.js  compression.ts  connect.ts  contractSolver.js  contractSolver.ts  contractWorker.ts  copyHome.js  corporation.ts  crawl.js  crawl.ts  crawlIPs.js  crime.js  crime.ts  darknetCrawl.ts  (+58 more)
src/darknet/: auth.ts  config.ts  master.ts  registry.ts  solverState.ts  solverWorker.ts  stasisLink.ts  taskTiming.ts  worker.ts
src/dependencyTest/: testModA.ts  testModB.ts  testModC.ts  testParse2.ts
src/discarded/: autoBackdoor.js  autoHackBootstrap.js  autoHackDebug.js  batchVisualiser.ts  copyHome.js  crawlTest.ts  deployParallel.js  find.js  firaCode.js  generic.js  interval.ts  ls.js  softDeploy.js  testparse2.js
src/dnet/: constants.ts  mutationWatcher.ts  registry.ts  run.ts  types.ts  worker.ts
src/hacking/: autoHackParallel.js  autoHackTest.js  grindLoop.ts  grow.js  grow.ts  growDebug.ts  hack.js  hack.ts  hackDebug.ts  weaken.js  weaken.ts
src/libraries/: augmentStatsDisplay.ts  augmentations.ts  batchCalculations.ts  batchExecution.ts  batchOptions.ts  batching.js  buyServer.ts  combatSkillTraining.ts  connect.ts  contractWorker.ts  crawl.ts  darkwebPasswordIntel.ts  element-example.xml  factionInvites.ts  factionWork.ts  findBestTarget.ts  floatingWindow.ts  format.js  format.ts  glowHelpFunction.ts  gymDashboard.ts  gymWorkout.ts  hackGrind.ts  infiltrationDom.ts  infiltrationKeyInput.ts  infiltrationMinesweeper.ts  infiltrationNavigation.ts  infiltrationSlash.ts  infiltrationSolvers.ts  infiltrationTargets.ts  infiltrationVictory.ts  infiltrationWireCutting.ts  logFn.ts  megacorpWork.ts  ports.ts  prepareServer.ts  purchasePrograms.ts  purchaseServer.ts  (+9 more)
tests/: batch.py  batching-timing-test.py  batching.js  bigMoSim.mjs  commitStreaks.mjs  factoriOsSim.mjs  generateIP.js  interval.py  kingOfTheHillBench.mjs  kingOfTheHillBench.ts  kingOfTheHillBenchWorker.mjs  kingOfTheHillCore.mjs  kingOfTheHillCore.ts  kingOfTheHillImprovedSolver.mjs  kingOfTheHillSim.mjs  kingOfTheHillTune.avg.json  kingOfTheHillTune.best.json  kingOfTheHillTune.max.json  kingOfTheHillTune.mjs  kingOfTheHillViz.html  kingOfTheHillVizWorker.mjs  mathMlSim.mjs  ops.py  shortestPath.js  spiralize.js  stockTrader2.js  stockTrader3.js  totalwaystosum.js  trianglePath.js
tests/koth_tune/: .clangd  CMakeLists.txt  CMakePresets.json  ladder_snipe.diff60.best.json  run_bench.sh  run_tune.sh
tests/koth_tune/python/: analyze.py  bench.py  bench_all.py  koth_gen.py  koth_harness.py  solver.py  trace.py
tests/koth_tune/src/: koth_bench_main.cpp  koth_common.hpp  koth_config.cpp  koth_config.hpp  koth_game.cpp  koth_game.hpp  koth_solver.cpp  koth_solver.hpp  koth_tune_main.cpp  koth_tuning.cpp  koth_tuning.hpp
themes/: home.json
types/: viteburner.d.ts
(+136 files in other folders)
